k8s/web-client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: vincentramaputra/viscord-web:sha-70e060a
        ports:
        - containerPort: 3000
          name: http
