k8s/web-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 3000
    targetPort: http
