k8s/web-client/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web
  labels:
    app: web
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`viscord.local`)
      kind: Rule
      services:
        - name: web
          port: 3000
